--- a/templates/Modales/trickEdit.html.twig
+++ b/templates/Modales/trickEdit.html.twig
@@ -20,6 +20,42 @@
                     <button class="btn btn-primary">Upload image</button>
                     {{ form_end(formImage[trick.id]) }}
 
+                    <div class="container-fluid">
+                        {% for image in images[trick.id] if image is not empty %}
+                            <div class="row overflow-auto h-200">
+                                {% for i in image %}
+                                    {% if i is not empty %}
+                                        {% if i.statut == 'primary' %}
+                                            <div class="col-2 row h-100 mx-0">
+                                                <div class="h-75 w-100 d-flex">
+                                                    <img class="border border-primary mw-100 mh-100 m-auto" src="{{ asset('build/uploads/' ~ i.name) }}" alt="{{ trick.title }} {{ i.name }}">
+                                                </div>
+                                                <div class="text-center my-auto mh-25 image-title">{{ i.name }}</div>
+                                            </div>
+                                            <form method="post" action="{{ path('image.delete', {id: trick.id, i: i.id}) }}" class="zindex-2">
+                                                <input type="hidden" name="_method" value="delete">
+                                                <input type="hidden" name="_token" value="{{ csrf_token('image_delete' ~ trick.id) }}">
+                                                <button class="py-0 px-2 btn btn-link text-dark"><i class="fas fa-trash-alt"></i></button>
+                                            </form>
+                                        {% else %}
+                                            <div class="col-2 row h-100 mx-0">
+                                                <div class="h-75 w-100 d-flex">
+                                                    <img class="mw-100 mh-100 m-auto" src="{{ asset('build/uploads/' ~ i.name) }}" alt="{{ trick.title }} {{ i.name }}">
+                                                </div>
+                                                <div class="text-center my-auto mh-25 image-title">{{ i.name }}</div>
+                                            </div>
+                                            <form method="post" action="{{ path('image.delete', {id: trick.id, i: i.id}) }}" class="zindex-2">
+                                                <input type="hidden" name="_method" value="delete">
+                                                <input type="hidden" name="_token" value="{{ csrf_token('image_delete' ~ trick.id) }}">
+                                                <button class="py-0 px-2 btn btn-link text-dark"><i class="fas fa-trash-alt"></i></button>
+                                            </form>
+                                        {% endif %}
+                                    {% endif %}
+                                {% endfor %}
+                            </div>
+                        {% endfor %}
+                    </div>
+
                     {% for image in images[trick.id] if image is not empty %}
                     <form method="post" action="{{ path('image.edit.statut', {id: trick.id}) }}">
                         <label for="image_id">Main picture</label>
